[gd_scene load_steps=2 format=3 uid="uid://ddsk43ynlodgy"]

[ext_resource type="Script" path="res://script/constructions/lanceur_boulet.gd" id="1_h535j"]

[node name="LanceurBoulet" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_h535j")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
